--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         const taskData = {
             taskName: $('#taskName').val(),
             important: $('#important').is(':checked'),
-            dateTime: data.values(),
+            dateTime: $('#dateTime1').val(),
             repeat: $('#repeat').is(':checked'),
             frequency: $('#frequency').val(),
             target: $('#target').is(':checked'),
