--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </label>
         </div>
         <div class="taskCard">
-            <label id="timeLabel" for="dateTime">Дата/Время</label>
+            <label id="timeLabel" for="dateTime1">Дата/Время</label>
             <div id="dateTimeContainer">
                 <input class="dateTime" type="datetime-local" id="dateTime1">
             </div>
@@ -150,6 +150,12 @@
         now.setSeconds(null)
         document.getElementById('dateTime').value = now.toISOString().slice(0, -1);
     });
+    let data = [];
+
+    for(let i=1; i<=count; i++) {
+        const dateTimeValue = document.getElementById('dateTime'+i).value;
+        data.push({id: 'dateTime'+i, dateTime: dateTimeValue});
+    }
     Telegram.WebApp.onEvent('mainButtonClicked', function () {
         const taskData = {
             taskName: $('#taskName').val(),
